--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,6 +28,8 @@ dependencies:
   geolocator: ^14.0.1
   google_fonts: ^6.2.1
   flutter_hooks: ^0.21.2
+  go_router: ^15.2.0
+  cached_network_image: ^3.4.1
 
 dev_dependencies:
   flutter_test:
@@ -49,3 +51,12 @@ flutter:
     - assets/
     - assets/images/
     - assets/icons/
+
+
+
+analyzer:
+  exclude:
+    - "**/*.g.dart"
+    - "**/*.freezed.dart"
+  errors:
+    invalid_annotation_target: ignore
