--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,19 +17,25 @@ dependencies:
 
   firebase_core: ^3.14.0
   firebase_auth: ^5.6.0
+  google_sign_in: ^6.3.0
 
   connectivity_plus: ^6.1.4
+  geolocator: ^14.0.1
   dio: ^5.8.0+1
   hive: ^2.2.3
-  flutter_riverpod: ^2.6.1
+  rxdart: ^0.28.0
+
+  go_router: ^15.2.0
+  flutter_hooks: ^0.21.2
 
   freezed_annotation: ^3.0.0
   json_annotation: ^4.9.0
-  geolocator: ^14.0.1
+
   google_fonts: ^6.2.1
-  flutter_hooks: ^0.21.2
-  go_router: ^15.2.0
   cached_network_image: ^3.4.1
+  hooks_riverpod: ^2.6.1
+  riverpod_annotation: ^2.6.1
+  cloud_firestore: ^5.6.9
 
 dev_dependencies:
   flutter_test:
@@ -40,9 +46,10 @@ dev_dependencies:
   flutter_launcher_icons: ^0.14.4
   custom_lint: ^0.7.5
   riverpod_lint: ^2.6.5
-  build_runner: ^2.4.15
+  build_runner: ^2.5.0
   freezed: ^3.0.6
   json_serializable: ^6.9.5
+  riverpod_generator: ^2.6.5
 
 flutter:
   uses-material-design: true
