--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,6 +1,6 @@
 name: pudge
 description: "A new Flutter project."
-publish_to: 'none' # Remove this line if you wish to publish to pub.dev
+publish_to: 'none'
 
 version: 1.0.0+1
 
@@ -14,28 +14,26 @@ dependencies:
   cupertino_icons: ^1.0.8
   gap: ^3.0.1
   flutter_svg: ^2.1.0
+  google_fonts: ^6.2.1
+  flutter_staggered_grid_view: ^0.7.0
 
   firebase_core: ^3.14.0
   firebase_auth: ^5.6.0
+  cloud_firestore: ^5.6.9
   google_sign_in: ^6.3.0
 
   connectivity_plus: ^6.1.4
-  geolocator: ^14.0.1
   dio: ^5.8.0+1
   hive: ^2.2.3
   rxdart: ^0.28.0
 
   go_router: ^15.2.3
   flutter_hooks: ^0.21.2
+  hooks_riverpod: ^2.6.1
+  riverpod_annotation: ^2.6.1
 
   freezed_annotation: ^3.0.0
   json_annotation: ^4.9.0
-
-  google_fonts: ^6.2.1
-  cached_network_image: ^3.4.1
-  hooks_riverpod: ^2.6.1
-  riverpod_annotation: ^2.6.1
-  cloud_firestore: ^5.6.9
 
 dev_dependencies:
   flutter_test:
@@ -58,8 +56,6 @@ flutter:
     - assets/
     - assets/images/
     - assets/icons/
-
-
 
 analyzer:
   exclude:
