--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,6 +25,7 @@ dependencies:
   connectivity_plus: ^6.1.4
   dio: ^5.8.0+1
   hive: ^2.2.3
+  flutter_secure_storage: ^4.2.1
   rxdart: ^0.28.0
 
   go_router: ^15.2.3
@@ -34,6 +35,7 @@ dependencies:
 
   freezed_annotation: ^3.0.0
   json_annotation: ^4.9.0
+
 
 dev_dependencies:
   flutter_test:
