--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,8 @@ dependencies:
 
   freezed_annotation: ^3.0.0
   json_annotation: ^4.9.0
+  image_picker: ^1.1.2
+  flutter_image_compress: ^2.4.0
 
 
 dev_dependencies:
