--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   image_picker: ^1.1.2
   cached_network_image: ^3.4.1
   photo_view: ^0.15.0
+  shimmer: ^3.0.0
 
 
 dev_dependencies:
