--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   cached_network_image: ^3.4.1
   photo_view: ^0.15.0
   shimmer: ^3.0.0
+  share_plus: ^11.0.0
 
 
 dev_dependencies:
