--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,6 +16,12 @@ dependencies:
   flutter_svg: ^2.1.0
   google_fonts: ^6.2.1
   flutter_staggered_grid_view: ^0.7.0
+  intl: ^0.20.2
+  cached_network_image: ^3.4.1
+  photo_view: ^0.15.0
+  shimmer: ^3.0.0
+  share_plus: ^11.0.0
+
 
   firebase_core: ^3.14.0
   firebase_auth: ^5.6.0
@@ -36,11 +42,6 @@ dependencies:
   json_annotation: ^4.9.0
 
   image_picker: ^1.1.2
-  cached_network_image: ^3.4.1
-  photo_view: ^0.15.0
-  shimmer: ^3.0.0
-  share_plus: ^11.0.0
-
 
 dev_dependencies:
   flutter_test:
